fixed datestamp on mobile for posts/archive/home

--- a/less/uw.body-content.less
+++ b/less/uw.body-content.less
@@ -234,6 +234,9 @@ span.next-page {
 			margin: 10px 80px 20px 0;
 			font-size: 33px;
 		}
+        p.date {
+            margin-bottom: -15px;
+        }
 	}
     .home {
         .uw-body {
